// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserInfoComponent should compile 1`] = `
<app-user-info
  folowing={[Function EventEmitter]}
  isUser="false"
  profile={[Function Object]}
>
  <div
    class="user-info"
  >
    <div
      class="container"
    >
      <div
        class="row"
      >
        <div
          class="col-xs-12 col-md-10 offset-md-1"
        >
          <mat-card>
            <mat-card-header>
              <div
                class="user-info__avatar"
                mat-card-avatar=""
              >
                <img
                  alt="username"
                  src="image"
                />
              </div>
              <mat-card-title>
                username
              </mat-card-title>
              <mat-card-subtitle>
                bio  
              </mat-card-subtitle>
            </mat-card-header>
            <mat-card-content>
              <button
                hidden=""
                mat-stroked-button=""
                routerlink="/settings"
              >
                 Edit Profile Settings
              </button>
              <app-follow-button
                ng-reflect-followed="false"
                ng-reflect-is-loading="false"
              >
                <button
                  mat-stroked-button=""
                >
                   Follow  
                   username 
                </button>
              </app-follow-button>
            </mat-card-content>
          </mat-card>
        </div>
      </div>
    </div>
  </div>
</app-user-info>
`;

exports[`UserInfoComponent should show edit profile settings button by "isUser" @Input equals to true 1`] = `
<app-user-info
  folowing={[Function EventEmitter]}
  isUser={[Function Boolean]}
  profile={[Function Object]}
>
  <div
    class="user-info"
  >
    <div
      class="container"
    >
      <div
        class="row"
      >
        <div
          class="col-xs-12 col-md-10 offset-md-1"
        >
          <mat-card>
            <mat-card-header>
              <div
                class="user-info__avatar"
                mat-card-avatar=""
              >
                <img
                  alt="username"
                  src="image"
                />
              </div>
              <mat-card-title>
                username
              </mat-card-title>
              <mat-card-subtitle>
                bio  
              </mat-card-subtitle>
            </mat-card-header>
            <mat-card-content>
              <button
                mat-stroked-button=""
                routerlink="/settings"
              >
                 Edit Profile Settings
              </button>
              <app-follow-button
                hidden=""
                ng-reflect-followed="false"
                ng-reflect-is-loading="false"
              >
                <button
                  mat-stroked-button=""
                >
                   Follow  
                   username 
                </button>
              </app-follow-button>
            </mat-card-content>
          </mat-card>
        </div>
      </div>
    </div>
  </div>
</app-user-info>
`;

exports[`UserInfoComponent should show following button by "isUser" @Input equals to false 1`] = `
<app-user-info
  folowing={[Function EventEmitter]}
  isUser="false"
  profile={[Function Object]}
>
  <div
    class="user-info"
  >
    <div
      class="container"
    >
      <div
        class="row"
      >
        <div
          class="col-xs-12 col-md-10 offset-md-1"
        >
          <mat-card>
            <mat-card-header>
              <div
                class="user-info__avatar"
                mat-card-avatar=""
              >
                <img
                  alt="username"
                  src="image"
                />
              </div>
              <mat-card-title>
                username
              </mat-card-title>
              <mat-card-subtitle>
                bio  
              </mat-card-subtitle>
            </mat-card-header>
            <mat-card-content>
              <button
                hidden=""
                mat-stroked-button=""
                routerlink="/settings"
              >
                 Edit Profile Settings
              </button>
              <app-follow-button
                ng-reflect-followed="false"
                ng-reflect-is-loading="false"
              >
                <button
                  mat-stroked-button=""
                >
                   Follow  
                   username 
                </button>
              </app-follow-button>
            </mat-card-content>
          </mat-card>
        </div>
      </div>
    </div>
  </div>
</app-user-info>
`;
